update caida, tweak darkmode

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b" target="_blank">Photography</a></div>
 
       <div id="nav-div">
-        <div id="darkmode" class="nav"><span id="darkmode-txt-b">Dark Mode</span>
+        <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="toggle()">
             <span class="slider round"></span>
