--- a/caida.html
+++ b/caida.html
@@ -21,13 +21,12 @@
 <body id="body">
   <div class="content-margins">
     <div id="header">
-      <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
       <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx" target="_blank">Photography</a></div>
 
       <div id="nav-div">
-        <div id="darkmode" class="nav"><span id="darkmode-txt-bx">Dark Mode</span>
+        <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="toggle()">
             <span class="slider round"></span>
@@ -104,9 +103,10 @@
       </div>
     </div>
 
-    <div class="impact-container">
-      <div class="grid"></div>
-      <div class="grid caption">
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p class="subheader caida-subheader">Consent Form</p>
         <p>The consent form is the first thing participants see when accessing 
            the web platform. The form was expanded vertically to cover a larger
            area of the screen than before and a shadow was placed at the bottom
@@ -114,12 +114,14 @@
            glance, the consent form is an organized, interactive element that 
            informs participants.</p>
       </div>
-      <div class="grid"><img src="assets/caida/quince-consent-form.jpg"></div>
+      <div></div>
+      <div><img src="assets/caida/quince-consent-form.jpg" style="padding-top: 2vw"></div>
     </div>
 
-    <div class="impact-container">
-        <div class="grid"></div>
-        <div class="grid caption">
+    <div class="body-container">
+        <div></div>
+        <div>
+          <p class="subheader caida-subheader">Tutorial Modal</p>
           <p>The tutorial modal window introduces participants to the interface 
              and what their jobs are. Originally, the window was much larger to 
              accomodate a bulkier logo and the oversized font. The redesign 
@@ -127,24 +129,28 @@
              was replaced by a more appropriate sized one and the Continue button 
              was adjusted to sit flush with the edges of the modal window.</p>
         </div>
-        <div class="grid"><img src="assets/caida/quince-tutorial.jpg"></div>
+        <div></div>
+        <div><img src="assets/caida/quince-tutorial.jpg" style="padding-top: 2vw"></div>
     </div>
 
-    <div class="impact-container">
-      <div class="grid"></div>
-      <div class="grid caption">
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p class="subheader caida-subheader">Sign In Page</p>
         <p>I designed and implemented the onboarding process that includes the 
            sign-in, sign-up, and forgot password screens. I also conceptualized 
            this design with the other modal windows in mind. I chose a deep 
            green to symbolize the currency that participants may earn through 
            the web platform. Lastly, I employed adequate negative spacing and contrast.</p>
       </div>
-      <div class="grid"><img src="assets/caida/quince-signin.jpg"></div>
+      <div></div>
+      <div><img src="assets/caida/quince-signin.jpg" style="padding-top: 2vw"></div>
     </div>
 
-    <div class="impact-container">
-      <div class="grid"></div>
-      <div class="grid caption">
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p class="subheader caida-subheader">Interactive Map</p>
         <p>In order to implement a subtle yet immersive, interactive US map, I 
            dug into amCharts, a JavaScript charting and mapping library, to 
            tweak changes within the code. The result is a seamless experience 
@@ -152,12 +158,13 @@
            locations. Notice, there is also a home button for those who get 
            carried away.</p>
       </div>
-      <div class="grid"><img src="assets/caida/quince-map.jpg"></div>
+      <div></div>
+      <div><img src="assets/caida/quince-map.jpg" style="padding-top: 2vw"></div>
     </div>
 
     <div class="conclusion-container">
-      <div class="grid"><div><p id="body-header">Conclusion + Takeaways</p></div></div>
-      <div class="grid">
+      <div><p id="body-header">Conclusion + Takeaways</p></div>
+      <div>
         <p>Starting off at the internship was a little rough: I had to become 
           familiar with Meteor, get certain dependencies installed on my 
           computer, join services for communication with the team, attain 
