--- a/snaash.html
+++ b/snaash.html
@@ -21,13 +21,12 @@
 <body id="body">
   <div class="content-margins">
     <div id="header">
-      <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
       <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx" target="_blank">Photography</a></div>
 
       <div id="nav-div">
-        <div id="darkmode" class="nav"><span id="darkmode-txt-bx">Dark Mode</span>
+        <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="toggle()">
             <span class="slider round"></span>
