--- a/snaash.html
+++ b/snaash.html
@@ -40,22 +40,17 @@
       <div id="valign-div">
         <p id="work-title">Snaash iOS App</p>
         <div class="body-container">
-          <div>
-            <div class="inline-div" style="padding-right: 4.5vw">
-              <p id="work-header">Timeline</p>
-              <p id="work-header">Role</p>
-              <p id="work-header">Team</p>
-              <p id="work-header">Course</p>
-            </div>
-          </div>
-          <div>
-            <div class="inline-div">
-              <p id="work-value">August 2018 — September 2018</p>
-              <p id="work-value">UX Designer</p>
-              <p id="work-value">A. Davalos, H. Bae, N. Nikiforov, S. Natalius, S. Somers</p>
-              <p id="work-value">Usability and Information Architecture</p>
-             </div>
-          </div> 
+            <div class="inline-div" style="padding-right: 4.5vw"><p id="work-header">Timeline</p></div>
+            <div class="inline-div"><p id="work-value">August 2018 — September 2018</p></div>
+
+            <div class="inline-div" style="padding-right: 4.5vw"><p id="work-header">Role</p></div>
+            <div class="inline-div"><p id="work-value">UX Designer</p></div>
+
+            <div class="inline-div" style="padding-right: 4.5vw"><p id="work-header">Team</p></div>
+            <div class="inline-div"><p id="work-value">A. Davalos, H. Bae, N. Nikiforov, S. Natalius, S. Somers</p></div>
+
+            <div class="inline-div" style="padding-right: 4.5vw"><p id="work-header">Course</p></div>
+            <div class="inline-div"><p id="work-value">Usability and Information Architecture</p></div>
         </div>
       </div>
     </div>
