responsive work pages

--- a/long-term.html
+++ b/long-term.html
@@ -38,9 +38,13 @@
     <div id="longterm-banner" class="banner"></div>
     <div class="banner-info">
       <div id="valign-div">
-        <div>
-          <p id="longterm-title" id="work-title">Long Term</p>
-          <p id="longterm-description">A collection of my personal design and development projects.</p>
+        <p id="longterm-title">Long Term</p>
+        <div class="body-container" style="grid-template-columns: 100%;">
+          <div>
+            <div class="inline-div">
+              <p id="longterm-description">A collection of my personal design and development projects.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
