--- a/quickly.html
+++ b/quickly.html
@@ -39,7 +39,7 @@
     <div class="banner-info">
       <div id="valign-div">
         <p id="work-title">Quickly Web App</p>
-        <div class="heading-container">
+        <div class="body-container">
           <div>
             <div class="inline-div" style="padding-right: 4.5vw">
               <p id="work-header">Timeline</p>
