--- a/snaash.html
+++ b/snaash.html
@@ -58,7 +58,7 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A987&viewport=-2234%2C550%2C0.514568&scaling=scale-down" target="_blank">Answerer Interface (Ages 50 and Up)</a></p>
+        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A987&viewport=-2234%2C550%2C0.514568&scaling=scale-down" target="_blank">Answerer Interface (Ages 50+)</a></p>
         <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A1207&viewport=-2234%2C550%2C0.514568&scaling=scale-down" target="_blank">Asker Interface (All Ages)</a></p>
       </div>
     </div>
@@ -85,7 +85,7 @@
 
     <div class="impact-container">
       <div></div>
-      <div class="caption quote">
+      <div id="second" class="caption quote">
         <p><i>“SNAASH is bridging the gap between generations. The elderly can 
            share advice with those who need it and the young ones can ask for 
            guidance. Through their app, you’re able to post a question and 
@@ -93,7 +93,7 @@
            experienced it before. ” </i><br/><br/>
            — Shark Tank: COGS 187A Edition</p>
       </div>
-      <div style="text-align: center;"><img src="assets/snaash/sharktank.jpg" style="filter: grayscale(0%); width: 60%"></div>
+      <div id="first" style="text-align: center;"><img src="assets/snaash/sharktank.jpg" style="filter: grayscale(0%); width: 60%"></div>
     </div>
 
     <div class="body-container">
@@ -156,7 +156,7 @@
 
     <div class="impact-container">
       <div></div>
-      <div class="caption">
+      <div id="second" class="caption">
         <p>Originally at the bottom navigation bar, we had a profile tab, a 
            home tab that leads to the feed of questions, and an ask tab (all in 
            the color blue in the image to the right). We also cared to include 
@@ -165,7 +165,7 @@
            information. Also planned was a voting system for best answers and a 
            monetary tip button for extra appreciation.</p>
       </div>
-      <div><img src="assets/snaash/architecture-planning.jpg"></div>
+      <div id="first"><img src="assets/snaash/architecture-planning.jpg"></div>
     </div>
 
     <div class="body-container">
@@ -190,7 +190,7 @@
 
     <div class="impact-container">
       <div></div>
-      <div class="caption">
+      <div id="second" class="caption">
         <p>We first conducted user testing on paper prototypes, a collection of 
            each group members’ low-fidelity mock-ups. We focused our critiques 
            on the layout of the interface and the logical flow of user interactions.
@@ -201,7 +201,7 @@
           — profile for answerers + their most popular advice <br/>
           — search/answer system separated by categories</p>
       </div>
-      <div><img src="assets/snaash/prototype-critique.jpg"></div>
+      <div id="first"><img src="assets/snaash/prototype-critique.jpg"></div>
     </div>
 
     <div class="ios-container">
@@ -339,22 +339,20 @@
     </div>
 
     <div class="p-container">
-      <div><p id="body-header">Final Interactive Prototypes</p></div>
-      <div>
+      <div><p id="body-header">Final Prototypes</p></div>
+      <div id="answerer-p">
         <iframe id="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
         <p class="snaash-subheader" style="text-align: center">Answerer Interface</p>
       </div>
-
       <div></div>
-
-      <div>
+      <div id="asker-p">
         <iframe id="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dcontain" allowfullscreen></iframe>
         <p class="snaash-subheader" style="text-align: center">Asker Interface</p>
       </div>
     </div>
 
     <div class="conclusion-container" style="margin-bottom: 3vw">
-      <div><p id="body-header">Conclusion + <br/>Takeaways</p></div>
+      <div><p id="body-header">Conclusion + Takeaways</p></div>
       <div>
         <p>Socializing and keeping in touch with 
            friends and family is key to a longer, happier life. For our older 
@@ -379,9 +377,9 @@
            and up to avoid wrongful use of the application.</p>
       </div>
       <div></div>
-      <center><br/><br/><img src="assets/snaash/fortune-cookie.png" width="50%"></center>
+      <center><br/><br/><img id="fortune-cookie" src="assets/snaash/fortune-cookie.png" width="50%"></center>
       <div></div>
-      <p id="img-caption">A fitting fortune cookie message that I personally received</p>
+      <div><p id="img-caption">A fitting fortune cookie message that I personally received</p></div>
     </div>
 
     <div id="footer">
