--- a/zilter.html
+++ b/zilter.html
@@ -132,7 +132,7 @@
     </div>
     <div class="impact-container">
       <div></div>
-      <div class="caption">
+      <div id="second" class="caption">
         <p>I noticed, while observing Kevin, that he needed a way to figure out 
            if a product’s physical dimensions were right for him. Here, he uses 
            the width of a paper to truly understand the diameter of a strainer. 
@@ -140,7 +140,7 @@
            it relative to himself. To us, this was a design opportunity to improve 
            product expectations.</p>
       </div>
-      <div><img src="assets/zilter/kevin.jpg"></div>
+      <div id="first"><img src="assets/zilter/kevin.jpg"></div>
     </div>
 
 
@@ -155,8 +155,8 @@
     </div>
     <div class="impact-container mb-2">
       <div></div>
-      <div><img src="assets/zilter/charles-1.jpg" style="padding-right: 1vw; width: 96%"></div>
-      <div style="text-align: right"><img src="assets/zilter/charles-2.jpg" style="padding-left: 1vw; width: 96%"></div>
+      <div id="first"><img src="assets/zilter/charles-1.jpg" style="padding-right: 1vw; width: 96%"></div>
+      <div id="second" style="text-align: right"><img src="assets/zilter/charles-2.jpg" style="padding-left: 1vw; width: 96%"></div>
     </div>
     <div class="body-container">
       <div></div>
@@ -183,15 +183,15 @@
     </div>
     <div class="impact-container">
       <div></div>
-      <div class="caption">
+      <div id="second" class="caption">
         <p>Ariane is browsing through a clothing website and wants to find the 
            best deals. She sets the price filter from lowest to highest so that 
-           she is able to see the items that are on sale or at the best price 
-           first. This observation shows us that users want ways to filter 
+           she can see the items that are on sale or at the best price 
+           first. This observation shows us that users want to filter 
            through large quantities of products to find exactly what they are 
            looking for. </p>
       </div>
-      <div><img src="assets/zilter/ariane.jpg"></div>
+      <div id="first"><img src="assets/zilter/ariane.jpg"></div>
     </div>
 
     <div class="body-container">
@@ -213,8 +213,8 @@
     </div>
     <div class="impact-container mb-2">
       <div></div>
-      <div><img src="assets/zilter/paper-landing.jpg" style="padding-right: 1vw; width: 96%"></div>
-      <div style="text-align: right"><img src="assets/zilter/paper-filter.jpg" style="padding-left: 1vw; width: 96%"></div>
+      <div id="first"><img src="assets/zilter/paper-landing.jpg" style="padding-right: 1vw; width: 96%"></div>
+      <div id="second" style="text-align: right"><img src="assets/zilter/paper-filter.jpg" style="padding-left: 1vw; width: 96%"></div>
     </div>
     <div class="body-container">
       <div></div>
@@ -234,8 +234,8 @@
     </div>
     <div class="impact-container mb-2">
       <div></div>
-      <div><img src="assets/zilter/wireframe-landing.jpg" style="padding-right: 1vw; width: 93%; outline: 1px solid black"></div>
-      <div style="text-align: right"><img src="assets/zilter/wireframe-filter.jpg" style="padding-left: 1vw; width: 93%; outline: 1px solid black"></div>
+      <div id="first"><img src="assets/zilter/wireframe-landing.jpg" style="padding-right: 1vw; width: 93%; outline: 1px solid black"></div>
+      <div id="second" style="text-align: right"><img src="assets/zilter/wireframe-filter.jpg" style="padding-left: 1vw; width: 93%; outline: 1px solid black"></div>
     </div>
     <div class="body-container">
       <div></div>
@@ -255,8 +255,8 @@
     </div>
     <div class="impact-container mb-2">
       <div></div>
-      <div><img src="assets/zilter/prototype-landing.png" style="padding-right: 1vw; width: 96%"></div>
-      <div style="text-align: right"><img src="assets/zilter/prototype-filter.png" style="padding-left: 1vw; width: 96%"></div>
+      <div id="first"><img src="assets/zilter/prototype-landing.png" style="padding-right: 1vw; width: 96%"></div>
+      <div id="second" style="text-align: right"><img src="assets/zilter/prototype-filter.png" style="padding-left: 1vw; width: 96%"></div>
     </div>
     <div class="body-container">
       <div></div>
@@ -268,8 +268,8 @@
     </div>
     <div class="impact-container mb-2">
       <div></div>
-      <div><img src="assets/zilter/prototype-results.png" style="padding-right: 1vw; width: 96%"></div>
-      <div style="text-align: right"><img src="assets/zilter/prototype-product.png" style="padding-left: 1vw; width: 96%"></div>
+      <div id="first"><img src="assets/zilter/prototype-results.png" style="padding-right: 1vw; width: 96%"></div>
+      <div id="second" style="text-align: right"><img src="assets/zilter/prototype-product.png" style="padding-left: 1vw; width: 96%"></div>
     </div>
     <div class="body-container">
       <div></div>
@@ -295,10 +295,10 @@
       <div></div>
       <div>
         <p class="subheader zilter-subheader">Branding</p>
-        <img src="assets/zilter/logo.png" style="display: block; margin: auto; width: 50%">
+        <img id="zilter-logo" src="assets/zilter/logo.png" style="display: block; margin: auto; width: 50%">
         <p>The name was inspired by the physical functionality of a filter. 
            Like a filter, we hope that our web app removes unwanted noise when 
-           trying to separate out important and non-important information.</p> <br/>
+           trying to separate out important and non-important information.</p> <br/><br/>
         <p>The black and gray color scheme was chosen 
            to reflect the simplicity of our mission goal of making product 
            purchases straightforward. The focus of our site is the products 
@@ -334,7 +334,7 @@
         <p>We think that Zilter has been developed well enough for its concept 
            to be understood. However, given the time and effort contraints of 
            the course (10 weeks with 3 members), we feel that we have only 
-           carried out the beginning stages of the original vision.</p> <br/>
+           carried out the beginning stages of the original vision.</p> <br/><br/>
         <p>We recognize the potential for improvement of many aspects of the 
            current web app. Such areas include responsive web-design and user 
            inferface.</p>
