--- a/long-term.html
+++ b/long-term.html
@@ -50,11 +50,11 @@
     </div>
 
     <div class="body-container-longterm">
-      <div class="grid">
+      <div>
         <div class="project-info">
           <p class="project-header">Rocket Countdown</p>
-          <p class="line-height-160">
-             <span class="project-date">December 2018</span><br/><br/>
+          <p class="longterm-date">December 2018</p><br/><br/>
+          <p id="longterm-details" class="line-height-160">
              HTML <br/>
              CSS <br/>
              JavaScript <br/>
@@ -63,15 +63,15 @@
              Color Theory</p>
         </div>
       </div>
-      <div class="grid"><img src="assets/long-term/rocket.gif"></div>
+      <div><img src="assets/long-term/rocket.gif"></div>
     </div>
 
     <div class="body-container-longterm">
-      <div class="grid">
+      <div>
         <div class="project-info">
           <p class="project-header">Smile</p>
-          <p class="line-height-160">
-             <span class="project-date">March 2019</span><br/><br/>
+          <p class="longterm-date">March 2019</p><br/><br/>
+          <p id="longterm-details" class="line-height-160">
              HTML <br/>
              CSS <br/>
              Adobe Illustrator <br/><br/>
@@ -79,15 +79,15 @@
              Line animation</p>
         </div>
       </div>
-      <div class="grid"><img src="assets/long-term/smile.gif"></div>
+      <div><img src="assets/long-term/smile.gif"></div>
     </div>
 
     <div class="body-container-longterm">
-      <div class="grid">
+      <div>
         <div class="project-info">
           <p class="project-header">My Money</p>
-          <p class="line-height-160">
-             <span class="project-date">June 2018</span> <br/><br/>
+          <p class="longterm-date">June 2018</p> <br/><br/>
+          <p id="longterm-details" class="line-height-160">
              Python <br/>
              Python Libraries / Modules <br/>
              Microsoft Excel <br/><br/>
@@ -97,7 +97,7 @@
           </p>
         </div>
       </div>
-      <div class="grid" style="margin-bottom: 10vw"><img src="assets/long-term/mymoney.jpg"></div>
+      <div style="margin-bottom: 10vw"><img src="assets/long-term/mymoney.jpg"></div>
     </div>
 
     <div id="footer">
