--- a/snaash.html
+++ b/snaash.html
@@ -50,7 +50,7 @@
             <div class="inline-div"><p id="work-value">A. Davalos, H. Bae, N. Nikiforov, S. Natalius, S. Somers</p></div>
 
             <div class="inline-div" style="padding-right: 4.5vw"><p id="work-header">Course</p></div>
-            <div class="inline-div"><p id="work-value">Usability and Information Architecture</p></div>
+            <div class="inline-div"><p id="work-value">Usability & Info Architecture</p></div>
         </div>
       </div>
     </div>
