--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
     </section>
     
-    <section>
+    <!-- <section>
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
@@ -127,7 +127,7 @@
           <p id="year">SPRING 2018</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section>
       <div class="grid-container-left">
