--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@
     </section> -->
 
     <section>
-      <div class="grid-container-left">
-        <div id="work-des">
-          <a id="title" href="https://ajzhen.com/long-term">Long Term</a>
-          <p id="summary">A collection of my personal design and development projects.</p>
-          <p id="year">2018 - PRESENT</p>
-        </div>
-        <div id="work-img" class="grid-item grid-item-right">
+      <div class="grid-container-right">
+        <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/long-term">
               <img src="assets/long-term/thumbnail.gif">
             </a>
           </div>
+        </div>
+        <div>
+          <a id="title" href="https://ajzhen.com/long-term">Long Term</a>
+          <p id="summary">A collection of my personal design and development projects.</p>
+          <p id="year">2018 - PRESENT</p>
         </div>
       </div>
     </section>
