increase tab width, description shadow, update about

--- a/about.html
+++ b/about.html
@@ -44,33 +44,40 @@
 
     <section>
       <div class="about-container">
-        <div class="padding-bottom">
+        <div>
           <p class="section-header">Biography</p>
-          <p class="about-p about-right-pad" id="about-txt">I’m a third year student studying Cognitive 
-             Science (Design / Interaction) at UC San Diego. Right now, I’m actively applying for UX Design and 
-             Developer internship positions for Summer 2019.</p>
+          <p id="about-txt">I am a 4th year student studying Cognitive Science 
+            (Design / Interaction) at UCSD and I serve as an Industry Relations 
+            Coordinator for the university’s biggest 
+            <a href="https://designatucsd.org/" id="datu" target="_blank">design community</a>. I also 
+            work for UCSD’s ITS department as a Web Developer.
+            <br/><br/>
+            I am open to UX Design and Developer internship positions for Fall 2019.</p>
         </div>
+      </div>
+    </section>
         
-        <div class="padding-bottom">
+    <section>
+      <div class="about-container">
+        <div>
           <p class="section-header">Experience</p>
-          <p class="about-p about-right-pad" id="about-txt">I’ve had the opportunities to work as a UX Developer 
+          <p id="about-txt">I have had the opportunities to work as a UX Developer 
              at <a href="http://www.caida.org/home/" id="work-1" target="_blank">CAIDA</a> and as a Data 
              Scientist at <a href="https://www.alphacorecap.com/" id="work-2" target="_blank">AlphaCore Capital</a> 
              before that. Apart from being in the office, you can catch me working on or 
              brainstorming for my next project.</p>
         </div>
+      </div>
+    </section>
         
-        <div class="padding-bottom">
+    <section>
+      <div class="about-container">
+        <div>
           <p class="section-header">Interests</p>
-          <p class="about-p" id="about-txt">On good days, I spend my time burning food calories through basketball, 
-             enjoying a thoughtful thriller film, and secretly browsing cat 
-             videos on Instagram.</p>
-
-          <span id="last-film" class="section-header">Last Film Watched</span>
-          <div id="movie">
-            <img id="movie-img" src="assets/movies/aladdin.jpg"/>
-            <p id="movie-txt">Aladdin</p>
-          </div>
+          <p id="about-txt">I may or may not be characterized as an avid 
+             basketball fan who ingests chips by the handful, and someone who 
+             objects to watching movies and shows more than once. I also keep up
+             with the latest movies. My last watched film: <span id="movie"><img id="movie-img" src="assets/movies/aladdin.jpg"/><span id="movie-txt">Aladdin</span></span></p>
         </div>
       </div>
     </section>
