fix mobile about spacing

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
           <p id="about-txt">I may or may not be characterized as an avid 
              basketball fan who ingests chips by the handful, and someone who 
              objects to watching movies and shows more than once. I also keep up
-             with the latest movies. My last watched film: <span id="movie"><img id="movie-img" src="assets/movies/aladdin.jpg"/><span id="movie-txt">Aladdin</span></span></p>
+             with the latest movies. <span id="movie">My last watched film: <img id="movie-img" src="assets/movies/aladdin.jpg"/><span id="movie-txt">Aladdin</span></span></p>
         </div>
       </div>
     </section>
