update about and resume

--- a/about.html
+++ b/about.html
@@ -45,12 +45,14 @@
     <section>
       <div class="about-container">
         <div>
-          <p class="section-header">Biography</p>
+          <p class="section-header">Currently</p>
           <p id="about-txt">I am a 4th year student studying Cognitive Science 
             (Design / Interaction) at UCSD and I serve as an Industry Relations 
-            Coordinator for the university’s biggest 
-            <a href="https://designatucsd.org/" id="datu" target="_blank">design community</a>. I also 
-            work for UCSD’s ITS department as a Web Developer.
+            Coordinator for <a href="https://designatucsd.org/" id="datu" target="_blank">Design at UCSD</a> 
+            to be the main point of contact between industry partners and the 
+            design organization. I also work for <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its" target="_blank">UCSD’s ITS department</a> 
+            as a Web Developer in migrating websites and improving content 
+            architecture and usability.
             <br/><br/>
             I am open to UX Design and Developer internship positions for Fall 2019.</p>
         </div>
@@ -60,11 +62,11 @@
     <section>
       <div class="about-container">
         <div>
-          <p class="section-header">Experience</p>
+          <p class="section-header">Past Experience</p>
           <p id="about-txt">I have had the opportunities to work as a UX Developer 
-             at <a href="http://www.caida.org/home/" id="work-1" target="_blank">CAIDA</a> and as a Data 
-             Scientist at <a href="https://www.alphacorecap.com/" id="work-2" target="_blank">AlphaCore Capital</a> 
-             before that. Apart from being in the office, you can catch me working on or 
+             at <a href="http://www.caida.org/home/" id="work-1" target="_blank">The Center for Applied Internet Data Analysis</a> 
+             and as a Data Scientist at <a href="https://www.alphacorecap.com/" id="work-2" target="_blank">AlphaCore Capital</a>. 
+             Apart from being in the office, you can catch me working on or 
              brainstorming for my next project.</p>
         </div>
       </div>
@@ -74,10 +76,9 @@
       <div class="about-container">
         <div>
           <p class="section-header">Interests</p>
-          <p id="about-txt">I may or may not be characterized as an avid 
-             basketball fan who ingests chips by the handful, and someone who 
-             objects to watching movies and shows more than once. I also keep up
-             with the latest movies. <span id="movie">My last watched film: <img id="movie-img" src="assets/movies/aladdin.jpg"/><span id="movie-txt">Aladdin</span></span></p>
+          <p id="about-txt">I may be characterized as an avid basketball fan 
+             who consumes chips by the handful and objects to watching movies 
+             and shows more than once. Since you’ve read this far, it seems proper that I reveal my last watched film to be <span id="movie"><img id="movie-img" src="assets/movies/aladdin.jpg"/><span id="movie-txt">Aladdin</span>.</span></p>
         </div>
       </div>
     </section>
