--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <p id="description">Andrew designs and develops for digital experiences.</p>
-    <p id="description-2">He is a design & interaction student at UC San Diego and had his most recent role at CAIDA.</p>
+    <p id="description-2">He is a student leader at UC San Diego’s biggest design community and an ITS Web Developer.</p>
 
     <div id="white-block"></div>
     <div id="color-block"></div>
