remove _blank and update movie

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b" target="_blank">Photography</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b">Photography</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -48,9 +48,9 @@
           <p class="section-header">Currently</p>
           <p id="about-txt">I am a 4th year student studying Cognitive Science 
             (Design / Interaction) at UCSD and I serve as an Industry Relations 
-            Coordinator for <a href="https://designatucsd.org/" id="datu" target="_blank">Design at UCSD</a> 
-            to be the main point of contact between industry partners and the 
-            design organization. I also work for <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its" target="_blank">UCSD’s ITS department</a> 
+            Coordinator for <a href="https://designatucsd.org/" id="datu">Design at UCSD</a> 
+            to function as the main point of contact between industry partners and the 
+            design organization. I also work under <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UCSD’s ITS department</a> 
             as a Web Developer in migrating websites and improving content 
             architecture and usability.
             <br/><br/>
@@ -64,8 +64,8 @@
         <div>
           <p class="section-header">Past Experience</p>
           <p id="about-txt">I have had the opportunities to work as a UX Developer 
-             at <a href="http://www.caida.org/home/" id="work-1" target="_blank">The Center for Applied Internet Data Analysis</a> 
-             and as a Data Scientist at <a href="https://www.alphacorecap.com/" id="work-2" target="_blank">AlphaCore Capital</a>. 
+             at <a href="http://www.caida.org/home/" id="work-1">The Center for Applied Internet Data Analysis</a> 
+             and as a Data Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a>. 
              Apart from being in the office, you can catch me working on or 
              brainstorming for my next project.</p>
         </div>
@@ -78,7 +78,7 @@
           <p class="section-header">Interests</p>
           <p id="about-txt">I may be characterized as an avid basketball fan 
              who consumes chips by the handful and objects to watching movies 
-             and shows more than once. Since you’ve read this far, it seems proper that I reveal my last watched film to be <span id="movie"><img id="movie-img" src="assets/movies/aladdin.jpg"/><span id="movie-txt">Aladdin</span>.</span></p>
+             and shows more than once. Since you’ve read this far, you should probably know my last watched film is <span id="movie"><img id="movie-img" src="assets/movies/spider-man-far-from-home.jpg"/><span id="movie-txt">Spider-Man</span>.</span></p>
         </div>
       </div>
     </section>
@@ -87,10 +87,10 @@
       <div id="contact">
           <ul>
             <li><span id="email" onmouseover="emailOver()" onmouseleave="emailLeave()">Email</span></li>
-            <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')" target="_blank">Résumé</a></li>
-            <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')" target="_blank">GitHub</a></li>
-            <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')" target="_blank">Instagram</a></li>
+            <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">Résumé</a></li>
+            <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">LinkedIn</a></li>
+            <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">GitHub</a></li>
+            <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')">Instagram</a></li>
           </ul>
         </div>
     </section>
