--- a/long-term.html
+++ b/long-term.html
@@ -23,7 +23,7 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-wx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-wx">About</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-wx" target="_blank">Photography</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-wx">Photography</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -93,7 +93,7 @@
              Microsoft Excel <br/><br/>
              Data Cleaning <br/>
              Finance Tracking <br/><br/>
-             <a id="link" href="https://github.com/andrewzhen/mymoney-public" target="_blank">GitHub Repository</a>
+             <a id="link" href="https://github.com/andrewzhen/mymoney-public">GitHub Repository</a>
           </p>
         </div>
       </div>
