--- a/zilter.html
+++ b/zilter.html
@@ -23,7 +23,7 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx" target="_blank">Photography</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx">Photography</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -63,8 +63,8 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>Website — <a id="link" href="https://zilterproject.github.io/" target="_blank">https://zilterproject.github.io/</a></p>
-        <p>GitHub Repository — <a id="link" href="https://github.com/zilterproject/zilterproject.github.io" target="_blank">https://github.com/zilterproject/zilterproject.github.io</a></p>
+        <p>Website — <a id="link" href="https://zilterproject.github.io/">https://zilterproject.github.io/</a></p>
+        <p>GitHub Repository — <a id="link" href="https://github.com/zilterproject/zilterproject.github.io">https://github.com/zilterproject/zilterproject.github.io</a></p>
       </div>
     </div>
 
@@ -284,7 +284,7 @@
            click on a result to see photos and all the technical specifications 
            as well as critical reviews and videos that help them make the best choice.
            <br/> <br/>
-           The working prototype can be accessed <a id="link" href="https://zilterproject.github.io/" target="_blank">here</a>.
+           The working prototype can be accessed <a id="link" href="https://zilterproject.github.io/">here</a>.
          </p>
       </div>
     </div>
