--- a/caida.html
+++ b/caida.html
@@ -23,7 +23,7 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx" target="_blank">Photography</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx">Photography</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -63,8 +63,8 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>CAIDA  — <a id="link" href="http://www.caida.org/home/" target="_blank">http://www.caida.org/home/</a></p>
-        <p>QUINCE — <a id="link" href="https://crowdtrace.caida.org/" target="_blank">https://crowdtrace.caida.org/</a> (Link may be unavailable for research is done periodically)</p>
+        <p>CAIDA  — <a id="link" href="http://www.caida.org/home/">http://www.caida.org/home/</a></p>
+        <p>QUINCE — <a id="link" href="https://crowdtrace.caida.org/">https://crowdtrace.caida.org/</a> (Link may be unavailable for research is done periodically)</p>
       </div>
     </div>
 
