--- a/snaash.html
+++ b/snaash.html
@@ -23,7 +23,7 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx" target="_blank">Photography</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx">Photography</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -58,8 +58,8 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A987&viewport=-2234%2C550%2C0.514568&scaling=scale-down" target="_blank">Answerer Interface (Ages 50+)</a></p>
-        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A1207&viewport=-2234%2C550%2C0.514568&scaling=scale-down" target="_blank">Asker Interface (All Ages)</a></p>
+        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A987&viewport=-2234%2C550%2C0.514568&scaling=scale-down">Answerer Interface (Ages 50+)</a></p>
+        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A1207&viewport=-2234%2C550%2C0.514568&scaling=scale-down">Asker Interface (All Ages)</a></p>
       </div>
     </div>
 
